<resources>
    <string name="app_name">RM Mobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lobby">Lobby</string>
    <string name="usersettings">UserSettings</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="rm">RM</string>
    <string name="user_name">User name</string>
    <string name="corporate_user_name">Corporate User name</string>
    <string name="job_title">Job Title</string>
    <string name="operations_manager_abcd_efgh">Operations Manager: Abcd Efgh</string>
    <string name="date_03_11_2021">Date: 03/11/2021</string>
    <string name="abcd_xyz">ABCD XYZ</string>
    <string name="estimate_no_123456">Estimate No.: 123456</string>
    <string name="status_pending">Status: Pending</string>
    <string name="lead_estimator_abcd_efgh">Lead Estimator: Abcd Efgh</string>
    <string name="department">Department</string>
    <string name="send_email">Send email</string>
    <string name="email">Email</string>
    <string name="it_support_email">email@email.com</string>
    <string name="support_number">Support Number</string>
    <string name="it_support_number">0123456789</string>
    <string name="search_name">Search</string>

    <string name="safety_information">Safety Information</string>
    <string name="waste_management">Waste Management</string>
    <string name="building_forward">Building Forward</string>
    <string name="sustainability">Sustainability</string>
    <string name="policies_and_procedures">Policies and Procedures</string>
    <string name="project_numbers">Project Numbers</string>
    <string name="estimate_numbers">Estimate Numbers</string>
    <string name="training_schedule">Training Schedule</string>
    <string name="corporate_directory">Corporate Directory</string>
    <string name="applications">Applications</string>
    <string name="it_support">IT Support</string>
    <string name="it_support_page">IT Support Page</string>
    <string name="rm_web">RM Web</string>
    <string name="training_excellence">Training for Excellence</string>

    <string name="safety_information_text">Safety \n Information</string>
    <string name="waste_management_text">Waste \n Management</string>
    <string name="building_forward_text">Building \n Forward</string>
    <string name="job_request_text">Job \n Request</string>
    <string name="human_resources_text">Human \n Resources</string>
    <string name="policies_and_procedures_text">Policies &amp; \n Procedures</string>
    <string name="job_numbers_text">Project \n Numbers</string>
    <string name="job_numbers_text_single_line">Project Numbers</string>
    <string name="estimated_numbers_text">Estimate \n Numbers</string>
    <string name="training_schedule_text">Under \n Construction</string>
    <string name="corporate_directory_text">Corporate \n Directory</string>
    <string name="time_entry_paystubs_text">Time Entry/\nPaystubs</string>
    <string name="time_entry_paystubs">Time Entry/Paystubs</string>

    <string name="user_details_not_found">User details not found.</string>
    <string name="under_construction">Under Construction</string>

    <string name="arial">fonts/arial.ttf</string>
    <string name="migraine_serif">fonts/migraine_serif.ttf</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="categories">Categories</string>

    <string-array name="application_categories">
        <item>Select Application Category</item>
        <item>Shopping</item>
        <item>Payroll and Time Entry</item>
        <item>Data Storage</item>
        <item>Construction Management Software</item>
        <item>Finance</item>
        <item>Medical</item>
        <item>Communication</item>
        <item>Social Media</item>
        <item>Authentication</item>
        <item>Expense Reports</item>
    </string-array>

    <string-array name="shopping_applications">
        <item>Ers Construction</item>
    </string-array>

    <string-array name="payroll_and_time_entry_applications">
        <item>Remote Payroll</item>
    </string-array>

    <string-array name="data_storage_applications">
        <item>Egnyte</item>
    </string-array>

    <string-array name="construction_management_applications">
        <item>Procore</item>
        <item>Unanet CRM</item>
    </string-array>

    <string-array name="finance_applications">
        <item>NetBenefits</item>
    </string-array>

    <string-array name="medical_applications">
        <item>Delta Dental Mobile App</item>
        <item>Alabama Blue</item>
    </string-array>

    <string-array name="communication_applications">
        <item>StarLeaf</item>
        <item>RingCentral</item>
    </string-array>

    <string-array name="social_media_applications">
        <item>R &amp; M Ambassadors</item>
    </string-array>

    <string-array name="authentication_applications">
        <item>Authy</item>
    </string-array>

    <string-array name="expense_reports_applications">
        <item>SAP Concur</item>
    </string-array>

    <string-array name="all_apps">
        <item>Ers Construction</item>
        <item>Remote Payroll</item>
        <item>Egnyte</item>
        <item>Procore</item>
        <item>NetBenefits</item>
        <item>Delta Dental Mobile App</item>
        <item>Alabama Blue</item>
        <item>StarLeaf</item>
        <item>RingCentral</item>
        <item>R &amp; M Ambassadors</item>
        <item>Authy</item>
        <item>SAP Concur</item>
        <item>Unanet CRM</item>
        <item>SAP SuccessFactors Mobile</item>
        <item>Ricky Kalmon</item>
    </string-array>

    <string name="ers_construction_products">ERS Construction Products</string>
    <string name="hh2">HH2 Remote Payroll</string>
    <string name="egnyte">Egnyte</string>
    <string name="procore">Procore</string>
    <string name="fidelity_netbenefits">Fidelity NetBenefits</string>
    <string name="delta_dental">Delta Dental</string>
    <string name="alabam_blue">Alabama Blue</string>
    <string name="starleaf">Starleaf</string>
    <string name="ring_central">RingCentral</string>
    <string name="rm_ambassify">R&amp;M Ambassify</string>
    <string name="authy">Authy</string>
    <string name="sap_concur">SAP Concur</string>
    <string name="unanet_crm">Unanet CRM</string>
    <string name="sap_success_factor">SAP SuccessFactors</string>
    <string name="ricky_kalmon">Ricky Kalmon</string>
    <string name="nothing_found">Nothing Found.</string>
    <string name="please_wait_list_is_loading">Please wait list is loading.</string>
    <string name="profile">Profile</string>

    <string name="add_to_contacts">Add to Contacts</string>
    <string name="call">Call</string>
    <string name="text">Text</string>

    <string-array name="guest_lobby_list">
        <item>About us</item>
        <item>Building Forward</item>
        <item>Join Our Team</item>
        <item>Contact us</item>
    </string-array>

    <string name="about_us">About us</string>
    <string name="join_our_team">Join Our Team</string>
    <string name="contact_us">Contact us</string>
</resources>