<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView_back_button"
            android:layout_width="40dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_settings"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:background="@color/white"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/circleImageView_user"
            app:layout_constraintTop_toBottomOf="@id/imageView_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_userInitials"
            app:layout_constraintStart_toStartOf="@id/circleImageView_user"
            app:layout_constraintEnd_toEndOf="@id/circleImageView_user"
            app:layout_constraintTop_toTopOf="@id/circleImageView_user"
            app:layout_constraintBottom_toBottomOf="@id/circleImageView_user"
            android:visibility="gone"
            android:text="@string/rm"
            android:textColor="@color/black"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/textView_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circleImageView_user" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_border"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_user_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

